--- a/style-account.css
+++ b/style-account.css
@@ -31,22 +31,18 @@ body {
 }
 .title {
     font-size: var(--lg);
-    margin-bottom: 12px;
-    text-align: center;
+    margin-bottom: 36px;
+    text-align: start;
 }
-.subtitle {
-    color: var(--very-light-pink);
-    font-size: var(--md);
-    font-weight: 300;
-    margin-top: 0;
-    margin-bottom: 35px;
-    text-align: center;
-}
+
 .form {
     display: flex;
     flex-direction: column;
     margin-bottom: 12px;
-
+}
+.form div {
+    display: flex;
+    flex-direction: column;
 }
 .label {
     font-size: var(--sm);
@@ -60,6 +56,11 @@ body {
     height: 32px;
     font-size: var(--md);
     padding: 6px;
+}
+.input-name,
+.input-email,
+.input-password{
+    margin-bottom: 22px;
 }
 .primary-button {
     background-color: var(--hospital-green);
@@ -78,7 +79,11 @@ body {
 
 }
 @media (max-width:640px) {
-    .logo {
-        display: block;
+    .form {
+        height: 100%;
+    }
+    .form {
+        height: 100%;
+        justify-content: space-between;
     }
 }
